# steel-1271

./: .gitignore
contracts/: .gitmodules  foundry.toml
contracts/script/: DeployAndPoC.sol
steel/: Cargo.toml  rust-toolchain.toml
steel/crates/guests/: Cargo.toml  build.rs
steel/crates/guests/eip-1271/: Cargo.toml
steel/crates/guests/eip-1271/src/: main.rs
steel/crates/host/: Cargo.toml
steel/crates/host/src/: main.rs
