[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
guests = { path = "./crates/guests" }

# risc0 monorepo dependencies.
risc0-build = { version = "1.2", features = ["docker"] }
risc0-zkvm = { version = "1.2", default-features = false }

# risc0-ethereum dependencies.
risc0-build-ethereum = { version = "1.3" }
risc0-ethereum-contracts = { version = "1.3" }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-1.3" }

alloy = { version = "0.9" }
alloy-primitives = { version = "0.8", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.8" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }
bytemuck = { version = "1.14" }
clap = { version = "4.5" }
hex = { version = "0.4" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive", "std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.39", features = ["full"] }
url = { version = "2.5" }
revm = { version = "19.2", default-features = false, features = ["std"] }

[profile.release]
debug = 1
lto = "thin"
