[package]
name = "eip-1271"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
alloy-primitives = { version = "0.8", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
alloy-sol-types = { version = "0.8" }
risc0-zkvm = { version = "1.2.0-rc.1", default-features = false, features = [
    "std",
] }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-1.3" }
revm = { version = "19.2", default-features = false, features = ["std"] }
borsh = "0.10.0"

[profile.release]
debug = 1
lto = "thin"
